NEXT-1636 - Use index in class names to avoid pseudo class selectors

--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
@@ -28,13 +28,13 @@
                                     <ul class="sw-admin-menu__navigation-list">
 
                                         {% block sw_admin_menu_navigation_main_items %}
-                                            <sw-admin-menu-item v-for="entry in mainMenuEntries"
+                                            <sw-admin-menu-item v-for="(entry, index) in mainMenuEntries"
                                                                 @menuItemHovered="openFlyout"
                                                                 @menuItemClicked="openSubMenu"
                                                                 :sidebarExpanded="isExpanded"
                                                                 :entry="entry"
                                                                 :key="entry.id || entry.path"
-                                                                :class="entry.label">
+                                                                :class="['sw-admin-menu__item--' + index, entry.label]">
                                             </sw-admin-menu-item>
                                         {% endblock %}
                                     </ul>
