--- a/Resources/administration/src/app/component/grid/sw-grid/sw-grid.html.twig
+++ b/Resources/administration/src/app/component/grid/sw-grid/sw-grid.html.twig
@@ -52,13 +52,12 @@
 
                                 <slot name="items" v-for="(item, index) in items">
                                     {% block sw_grid_body_slot_items %}
-                                        <sw-grid-row class="sw-grid__item"
-                                                     :style="columnFlex"
+                                        <sw-grid-row :style="columnFlex"
                                                      :key="item.id"
                                                      :item="item"
                                                      :index="index"
                                                      @inline-edit-finish="onInlineEditFinish"
-                                                     :class="{ 'is--selected': isSelected(item.id), 'is--deleted': item.isDeleted, 'is--new': item.isLocal}">
+                                                     :class="['sw-grid__row--' + index, { 'is--selected': isSelected(item.id), 'is--deleted': item.isDeleted, 'is--new': item.isLocal }]">
 
                                             {% block sw_grid_body_item_selectable %}
                                                 <div class="sw-grid-column" v-if="selectable">
