--- a/Resources/administration/src/app/component/form/sw-confirm-field/sw-confirm-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-confirm-field/sw-confirm-field.html.twig
@@ -31,6 +31,7 @@
                 {% block sw_confirm_field_confirm_button %}
                     <sw-button
                         class="sw-confirm-field__button sw-confirm-field__button--submit"
+                        :disabled="preventEmptySubmit && !draft.length"
                         square
                         size="x-small"
                         variant="primary"
