--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -3,7 +3,7 @@
 
         <template slot="smart-bar-header">
             {% block sw_category_smart_bar_header %}
-                <h2 v-if="category && !isLoading">{{ placeholder(category, 'name') }}</h2>
+                <h2 v-if="category">{{ placeholder(category, 'name') }}</h2>
                 <h2 v-else>{{ $tc('sw-category.general.headlineCategories') }}</h2>
             {% endblock %}
         </template>
