ntr/fix-rulebuilder-styling

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.scss
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.scss
@@ -240,7 +240,7 @@ $sw-condition-base-color-error: $color-crimson;
     border: none;
   }
 
-  .sw-field__input {
+  .sw-field {
     input, select {
       outline: none;
       box-shadow: none;
