--- a/Resources/administration/src/module/sw-order/component/sw-order-delivery-metadata/sw-order-delivery-metadata.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-delivery-metadata/sw-order-delivery-metadata.html.twig
@@ -25,7 +25,8 @@
                 </sw-description-list>
             {% endblock %}
             {% block sw_order_delivery_metadata_shipping_address %}
-                <sw-address :headline="$tc('sw-order.detailBase.headlineDeliveryAddress')"
+                <sw-address class="sw-order-delivery-metdata__address"
+                            :headline="$tc('sw-order.detailBase.headlineDeliveryAddress')"
                             :address="delivery.shippingOrderAddress">
                 </sw-address>
             {% endblock %}
