--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-and-container/sw-condition-and-container.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-and-container/sw-condition-and-container.html.twig
@@ -12,16 +12,17 @@
                             </div>
                         {% endblock %}
                         {% block sw_condition_container_children_component %}
-                            <component v-bind:is="getComponent(child.type)"
+                            <component :is="getComponent(child.type)"
                                        :condition="child"
-                                       :conditionAssociations="conditionAssociations"
-                                       :level="level + 1"
-                                       :conditionStore="conditionStore"
+                                       :entityAssociationStore="entityAssociationStore"
                                        :entityName="entityName"
+                                       :conditionIdentifier="conditionIdentifier"
+                                       :conditionStore="conditionStore"
+                                       :level="level + 1"
+                                       :parentDisabledDelete="disabledDeleteButton"
                                        @delete-condition="onDeleteCondition"
                                        @create-before="createPlaceholderBefore"
                                        @create-after="createPlaceholderAfter">
-                                       @delete-condition="onDeleteCondition">
                             </component>
                         {% endblock %}
                     </div>
