--- a/Resources/administration/src/app/component/form/sw-colorpicker/sw-colorpicker.html.twig
+++ b/Resources/administration/src/app/component/form/sw-colorpicker/sw-colorpicker.html.twig
@@ -1,4 +1,4 @@
-{% block sw_colorpicker %}
+{% block sw_text_field %}
     <div class="sw-colorpicker" :class="fieldClasses" xmlns:v-bind="http://www.w3.org/1999/xhtml">
 
         <!-- Label -->
