NEXT-1702 - fix date range rule time switch

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
@@ -8,13 +8,13 @@
         </sw-field>
         <sw-field :type="condition.value.useTime ? 'datetime' : 'date'"
                   name="fromDate"
-                  :datepickerConfig="datepickerConfig"
+                  :config="datepickerConfig"
                   v-model="fromDate"
                   class="field field--main field--date has--arrow">
         </sw-field>
         <sw-field :type="condition.value.useTime ? 'datetime' : 'date'"
                   name="toDate"
-                  :datepickerConfig="datepickerConfig"
+                  :config="datepickerConfig"
                   v-model="toDate"
                   class="field field--main field--date">
         </sw-field>
