--- a/Resources/administration/src/app/component/form/sw-number-field/sw-number-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-number-field/sw-number-field.html.twig
@@ -8,7 +8,7 @@
                    :step="step"
                    :validation="validation"
                    :name="displayName"
-                   :placeholder="placeholder"
+                   :placeholder="fieldPlaceholder"
                    @input="onInput"
                    @keydown.up="increaseNumberByStep"
                    @keydown.down="decreaseNumberByStep"
