--- a/Resources/administration/src/app/component/form/sw-password-field/sw-password-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-password-field/sw-password-field.html.twig
@@ -4,7 +4,7 @@
             <input :type="showPassword ? 'text' : 'password'"
                    :id="id"
                    :name="displayName"
-                   :placeholder="placeholder"
+                   :placeholder="fieldPlaceholder"
                    :disabled="disabled ? 'disabled' : false"
                    @input="onInput"
                    @change="onChange"
