--- a/Resources/administration/src/module/sw-navigation/component/sw-navigation-view/sw-navigation-view.html.twig
+++ b/Resources/administration/src/module/sw-navigation/component/sw-navigation-view/sw-navigation-view.html.twig
@@ -10,5 +10,18 @@
                 </sw-container>
             </sw-card>
         {% endblock %}
+
+        {% block sw_navigation_view_layout %}
+            <sw-card :title="$tc('sw-navigation.general.headlineLayoutCard')" :isLoading="isLoading">
+                <sw-container columns="repeat(auto-fit, minmax(150px, 1fr))" gap="0px 30px" class="sw-navigation__infos">
+                    <sw-select :store="cmsPageStore"
+                               name="cmsPageId"
+                               id="cmsPageId"
+                               :value="navigation.cmsPageId"
+                               v-model="navigation.cmsPageId">
+                    </sw-select>
+                </sw-container>
+            </sw-card>
+        {% endblock %}
     </sw-card-view>
 {% endblock %}
